crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__postfix_type_modifiers_apply_left_to_right.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_type(\"int<4>[2]\")"
---
Array
  ChevronSuffix
    TypeName "int"
    4
  2
