crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__power_is_right_associative.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"2 ** 3 ** 4;\", Parser::parse_statement)"
---
ExprStmt
  Binary "**"
    2
    Binary "**"
      3
      4
