crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__precedence_of_arithmetic.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"1 + 2 * 3\", Parser::parse_expr)"
---
Binary "+"
  1
  Binary "*"
    2
    3
