crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__prefix_and_postfix_increment-2.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"x++\", Parser::parse_expr)"
---
PostfixUnary "++"
  x
