crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__primitive_type.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"float\", parse_type)"
---
TypeName "float"
