crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__processor_latency_assignment_is_not_a_container_decl.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"processor.latency = length;\", Parser::parse_statement)"
---
ExprStmt
  Assign "="
    Field "latency"
      processor
    length
