crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__processor_with_typed_specialisation_param.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"processor SquareWave (int length) { output stream int out; }\",\nParser::parse_statement)"
---
ProcessorDecl "SquareWave"
  SpecialisationParam value "length"
    TypeName "int"
  EndpointGroup output stream
    EndpointDecl "out"
      TypeName "int"
