crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__processor_with_typed_specialisation_param_default_value.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "parse_stmt(\"processor Gain (int channelCount = 2) { output stream int out; }\")"
---
ProcessorDecl "Gain"
  SpecialisationParam value "channelCount"
    TypeName "int"
    2
  EndpointGroup output stream
    EndpointDecl "out"
      TypeName "int"
