crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__processor_with_using_specialisation_param.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"processor Source (using DataType) { output stream int out; }\",\nParser::parse_statement)"
---
ProcessorDecl "Source"
  SpecialisationParam using "DataType"
  EndpointGroup output stream
    EndpointDecl "out"
      TypeName "int"
