crates/cmajor-lang/src/parser/snapshots/cmajor_lang__parser__parser__tests__processor_with_using_specialisation_param_default_type.snap
---
source: crates/cmajor-lang/src/parser/parser.rs
expression: "dump(\"processor P (using T = float32) { output stream int out; }\",\nParser::parse_statement)"
---
ProcessorDecl "P"
  SpecialisationParam using "T"
    TypeName "float32"
  EndpointGroup output stream
    EndpointDecl "out"
      TypeName "int"
